--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,8 @@ div[style*="margin: 16px 0"] {
     width: 100%;
     max-width: 600px;
 }
+.full-width-image img {
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+}
